2006-10-31 Sancho Lerena  <slerena@artica.es>

	* pandora_console/peargraph_test.php: Test graph to check Pear
	Graph instalation. Needs to be edited and put a valid TTF font.

2006-10-22 dervitx <josepublico@jnavarro.net>

        * pandora_console/reporting/fgraph.php: dynamic precalculated tables

        * pandora_console/reporting/stat_win.php: dynamic precalculated tables

2006-10-21 Sancho Lerena <slerena@artica.es>

        * include/functions.php: Change function no_permission () to show
          noaccess.gif image correctly, due a path problem.

        * general/noaccess.php: Change code to show noaccess.gif correctly.

2006-10-09 Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_alertas.php: Add code for showing 'Never'
	if never an alert has been triggered.
	
	* operation/agentes/estado_alertas.php, estado_agente.php
	, status_monitor.php: Changed select size.
	
	* operation/incidents/incident_search.php: Changed select size.
	
	* operation/messages/message.php: Changed select size.
	
	* godmode/usuarios/configurar_usuarios.php: Changed select size.
	
	* godmode/setup/setup.php: Changed select size.

2006-10-08 Sancho Lerena <slerena@artica.es>

	* incident_detail.php: Fixed DOS newlines to UNIX newlines. Fixed
	  help code. Fixed Background color for field "Source".
 
2006-10-04 Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_ultimopaquete.php: Delete old comments.
	
	* general/login_page.php, logon_ok.php: Updated headers.
	
	* include/config.php: Set PHP errors disabled by default.

2006-09-28  Sancho Lerena  <slerena@artica.es>

	* languages/language_es_es.php: Fixed message "out of limits"
          without tildes in spanish for jpgraph output.

	* pandoradb_1.1_to_1.2.sql: Fixed small issues: mod_data_inc was
	  as mod_inc.gif in modify SQL sentence. Spanish language is
	  _es_es not _es. Setup by default english language after
	  migration. Added network agent as OS. Changed Build versions in